--- a/index.html
+++ b/index.html
@@ -224,6 +224,83 @@
         box-shadow: none;
       }
     }
+
+    /* Add viewport meta tag in HTML head (important for mobile responsiveness) */
+/* <meta name="viewport" content="width=device-width, initial-scale=1.0"> */
+
+/* Existing CSS remains the same until the media query section */
+
+/* Enhanced Responsive adjustments */
+@media (max-width: 600px) {
+  .chat-container {
+    height: 100vh;
+    border: none;
+    box-shadow: none;
+    width: 100%;
+  }
+
+  .message {
+    max-width: 95%;
+  }
+
+  .message-content {
+    padding: 0.5rem 0.75rem;
+    font-size: 0.875rem;
+  }
+
+  textarea {
+    font-size: 0.875rem;
+    padding: 0.5rem 0.75rem;
+  }
+
+  button {
+    padding: 0.5rem 1rem;
+    font-size: 0.875rem;
+    white-space: nowrap;
+  }
+
+  .avatar {
+    width: 28px;
+    height: 28px;
+    font-size: 0.75rem;
+  }
+
+  .chat-box {
+    padding: 0.75rem;
+    gap: 0.5rem;
+  }
+
+  .input-container {
+    padding: 0.75rem;
+  }
+
+  /* Adjust height for mobile browsers */
+  body {
+    height: 100%;
+    overflow: auto;
+  }
+  
+  .chat-container {
+    min-height: 100vh;
+  }
+}
+
+/* Add this to handle textarea resizing on mobile */
+@media (max-width: 480px) {
+  .input-box {
+    flex-direction: column;
+  }
+  
+  button {
+    width: 100%;
+    padding: 0.75rem;
+  }
+  
+  textarea {
+    min-height: 48px;
+    max-height: 150px;
+  }
+}
   </style>
 </head>
 <body>
